--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,9 @@
   "[html]": {
     "editor.insertSpaces": true,
     "editor.tabSize": 4
-  }
+  },
+  "[python]": {
+    "editor.insertSpaces": true,
+    "editor.tabSize": 4
+  },
 }
